All_Component_DX/force-app/main/default/objects/Case_Tracker__c/Case_Tracker__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Object helps to track waiting periods encountered during the life cycle of a Case or Service Order.</description>
    <label>Process Bottleneck</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Bottlenecks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>