All_Component_DX/force-app/main/default/objects/Case_Tracker__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that owns the issue. Reference to standard user object.</description>
    <inlineHelpText>Name of the ServiceMax user responsible for tracking and resolving this issue.</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N70000001hzYXEAY</relationshipName>
    <type>Lookup</type>
</CustomField>