All_Component_DX/force-app/main/default/objects/Case_Tracker__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>Date and time when this issue was resolved.</description>
    <inlineHelpText>Date and time when this issue was resolved.</inlineHelpText>
    <label>End Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>