All_Component_DX/force-app/main/default/objects/Case_Tracker__c/fields/Issue_Area__c.field-meta.xml
<CustomField>
    <fullName>Issue_Area__c</fullName>
    <description>Broad area that identifies where the issue is.</description>
    <inlineHelpText>Broad area that identifies where the issue/bottleneck is.</inlineHelpText>
    <label>Issue Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Work Order</fullName>
            </value>
            <value>
                <fullName>ERP</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>