All_Component_DX/force-app/main/default/objects/Case_Tracker__c/fields/Issue_Description__c.field-meta.xml
<CustomField>
    <fullName>Issue_Description__c</fullName>
    <description>Detailed description of the issue/bottleneck.</description>
    <inlineHelpText>Detailed description of the issue/bottleneck.</inlineHelpText>
    <label>Issue Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>