All_Component_DX/force-app/main/default/objects/Case_Tracker__c/fields/Issue_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Issue_Subcategory__c</fullName>
    <description>Classification of the issue within an issue area.</description>
    <inlineHelpText>Classification of the issue within an issue area.</inlineHelpText>
    <label>Issue Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Issue_Area__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Missing Information</fullName>
            </value>
            <value>
                <fullName>Wrong Information</fullName>
            </value>
            <value>
                <fullName>Need Review</fullName>
            </value>
            <value>
                <fullName>Need Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>