All_Component_DX/force-app/main/default/objects/Case_Tracker__c/fields/RMA_Shipment_Ref__c.field-meta.xml
<CustomField>
    <fullName>RMA_Shipment_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RMA or Shipment linked to this process bottleneck. Reference to an existing Parts Order record in ServiceMax</description>
    <label>Parts Order Reference</label>
    <referenceTo>RMA_Shipment_Order__c</referenceTo>
    <relationshipName>Case_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>