All_Component_DX/force-app/main/default/objects/Case_Tracker__c/fields/Service_Order__c.field-meta.xml
<CustomField>
    <fullName>Service_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service order number connected to this issue. Is a lookup to an existing service order in ServiceMax</description>
    <inlineHelpText>Service order number connected to this issue. Is a lookup to an existing service order in ServiceMax</inlineHelpText>
    <label>Work Order</label>
    <referenceTo>Service_Order__c</referenceTo>
    <relationshipName>Case_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>