All_Component_DX/force-app/main/default/objects/Case_Tracker__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>Date and time when this issue/bottleneck started</description>
    <inlineHelpText>Date and time when this issue/bottleneck started</inlineHelpText>
    <label>Start Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>