All_Component_DX/force-app/main/default/objects/Case_Tracker__c/fields/Waiting_On_Contact__c.field-meta.xml
<CustomField>
    <fullName>Waiting_On_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the customer contact responsible for resolving this issue.</description>
    <inlineHelpText>Name of the customer contact responsible for resolving this issue.</inlineHelpText>
    <label>Waiting On Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>R00N70000001hzZFEAY</relationshipName>
    <type>Lookup</type>
</CustomField>